# toolbox

./: .gitattributes  .gitignore  AUDIT_V3.3_2026-07-20.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  lumieres.json  node.toml.example  run.txt  sequences.json
.github/workflows/: ci.yml  release.yml
crates/artnet/: Cargo.toml
crates/artnet/src/: lib.rs
crates/control-http/: Cargo.toml
crates/control-http/assets/: index.html
crates/control-http/src/: chataigne.rs  lib.rs  monitor.rs  oscquery.rs  ota.rs  zipper.rs
crates/control-midi/: Cargo.toml
crates/control-midi/src/: lib.rs
crates/control-osc/: Cargo.toml
crates/control-osc/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  command.rs  config.rs  error.rs  fader.rs  features.rs  lib.rs  logging.rs  media.rs  output.rs  preset.rs  reglages.rs  sequenceur.rs  source.rs  state.rs
crates/engine/: Cargo.toml
crates/engine/examples/: bench_raster.rs
crates/engine/shaders/: warp.frag  warp.vert
crates/engine/src/: composite.rs  homography.rs  lib.rs  lut.rs  player.rs  raster.rs  render.rs  video.rs
crates/gst/: Cargo.toml
crates/gst/src/: backend.rs  composite.rs  kms.rs  lib.rs  rtsp.rs
crates/ndi/: Cargo.toml
crates/ndi/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: bascules.rs  fleet.rs  journal.rs  main.rs  supervision.rs  sync.rs  telemetrie.rs
crates/render/: Cargo.toml
crates/render/src/: gpu.rs  lib.rs  raster.rs  warp.wgsl  window.rs
deploy/: README.md  install-autostart-windows.bat  install.sh  installer-windows.ps1  run-portable.bat  run-portable.sh  smoke.sh
deploy/systemd/: toolbox-node.service
docs/: manuel.html
docs/design/: ui-mockup.html
tools/bench/: 01_prepare_media.sh  02_decode_bench.sh  README.md
tools/mapping/: homography_ref.py
