[workspace]
resolver = "2"
members = ["crates/core", "crates/node"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/CHANGEME/toolbox"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "signal", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Qualité : on interdit ce qui produit des bugs silencieux.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
