[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/engine",
    "crates/render",
    "crates/gst",
    "crates/control-http",
    "crates/control-osc",
    "crates/control-midi",
    "crates/artnet",
    "crates/ndi",
    "crates/node",
]

[workspace.package]
version = "3.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pymenvert/toolbox"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "signal",
    "time",
    "net",
    "fs",
    "io-util",
] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Qualité : on interdit ce qui produit des bugs silencieux.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
# Binaire plus léger (Pi) ; les noms de symboles restent pour les backtraces.
strip = "debuginfo"
