[package]
name = "toolbox-control-http"
description = "Contrôle HTTP du node : REST + WebSocket + web UI embarquée + monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toolbox-core = { path = "../core" }
toolbox-engine = { path = "../engine" }
axum = { version = "0.8", features = ["ws"] }
futures-util = { version = "0.3", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
