[package]
name = "toolbox-control-http"
description = "Contrôle HTTP du node : REST + WebSocket + web UI embarquée + monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toolbox-core = { path = "../core" }
toolbox-engine = { path = "../engine" }
axum = { version = "0.8", features = ["ws"] }
futures-util = { version = "0.3", default-features = false }
# Aperçu de la sortie : encodage PNG pur Rust.
png = "0.18"
# Décodage des identifiants HTTP Basic (mot de passe optionnel de l'UI).
base64 = "0.22"
# Fichiers du parc : le node relaie ses médias vers les autres nodes en HTTP
# pur (pas de TLS sur un LAN de régie) — client léger, corps en flux.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
# Tests des routes axum sans socket : Router::oneshot + collecte du corps.
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
# Client WebSocket réel pour tester l'arrêt propre du serveur.
tokio-tungstenite = "0.29"

[lints]
workspace = true
