[package]
name = "toolbox-control-midi"
description = "Contrôle MIDI du node : notes/CC → commandes du bus, bindings configurables dans node.toml"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toolbox-core = { path = "../core" }
midir = "0.10"
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
