[package]
name = "toolbox-control-osc"
description = "Contrôle OSC du node (UDP) : mapping adresses → commandes du bus. Pensé pour Chataigne."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toolbox-core = { path = "../core" }
rosc = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
