[package]
name = "toolbox-control-osc"
description = "Contrôle OSC du node (UDP) : mapping adresses → commandes du bus. Pensé pour Chataigne."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toolbox-core = { path = "../core" }
rosc = "0.10"
# Noms canoniques des paramètres (couleur/effets) pour le retour d'état.
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
