[package]
name = "toolbox-engine"
description = "Moteur de rendu et de lecture : mapping (homographie), paramètres shader, player. La partie GStreamer arrive avec le matériel."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toolbox-core = { path = "../core" }
# Rendu CPU parallélisé par lignes : l'aperçu web et le repli sans GPU en
# profitent (mesuré ~×nb-cœurs sur le banc bench_raster).
rayon = "1"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
