[package]
name = "toolbox-gst"
description = "Backend vidéo GStreamer du player (derrière la feature `gstreamer`)"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# Sans cette feature, la crate est vide : le workspace compile partout sans
# les bibliothèques système GStreamer (même modèle que le MIDI/ALSA).
gstreamer = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]

[dependencies]
toolbox-core = { path = "../core" }
toolbox-engine = { path = "../engine" }
tokio = { workspace = true }
tracing = { workspace = true }
# v1_18 : INSTANT_RATE_CHANGE (vitesse sans coupure, pour la synchro) —
# exige GStreamer ≥ 1.18 au runtime (pack Windows 1.26, Pi bookworm 1.22).
gstreamer = { version = "0.24", optional = true, features = ["v1_18"] }
gstreamer-app = { version = "0.24", optional = true }
gstreamer-video = { version = "0.24", optional = true }

[lints]
workspace = true
