[package]
name = "toolbox-node"
description = "Binaire du node : assemble les modules selon la config"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "toolbox-node"
path = "src/main.rs"

[features]
default = ["midi"]
# Le MIDI dépend d'ALSA sous Linux : désactivable pour les vérifications
# croisées sans bibliothèques système (`--no-default-features`).
midi = ["dep:toolbox-control-midi"]

[dependencies]
toolbox-core = { path = "../core" }
toolbox-engine = { path = "../engine" }
toolbox-control-http = { path = "../control-http" }
toolbox-control-osc = { path = "../control-osc" }
toolbox-control-midi = { path = "../control-midi", optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
