[package]
name = "toolbox-node"
description = "Binaire du node : assemble les modules selon la config"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "toolbox-node"
path = "src/main.rs"

[features]
default = ["midi", "render"]
# Le MIDI dépend d'ALSA sous Linux : désactivable pour les vérifications
# croisées sans bibliothèques système (`--no-default-features`).
midi = ["dep:toolbox-control-midi"]
# Fenêtre de sortie (mires warpées). Désactivée en cross ARM64 : le Pi aura
# sa propre chaîne vidéo (GStreamer/DRM) après le bench matériel.
render = ["dep:toolbox-render"]
# Backend vidéo GStreamer (décodage réel). Hors defaut : exige les
# bibliothèques système GStreamer à la compilation ET le runtime sur la
# machine cible (voir deploy/README.md). Compiler avec :
# cargo build --release -p toolbox-node --features gstreamer
gstreamer = ["dep:toolbox-gst", "toolbox-gst/gstreamer"]

[dependencies]
toolbox-core = { path = "../core" }
toolbox-engine = { path = "../engine" }
toolbox-render = { path = "../render", optional = true }
toolbox-gst = { path = "../gst", optional = true }
toolbox-control-http = { path = "../control-http" }
toolbox-control-osc = { path = "../control-osc" }
toolbox-control-midi = { path = "../control-midi", optional = true }
# Découverte réseau des autres nodes (page fleet) : mDNS pur Rust.
mdns-sd = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Journal sur disque : un fichier par jour dans paths.logs, écriture non
# bloquante (une carte SD lente ne fige jamais le node).
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
toml = { workspace = true }

[lints]
workspace = true
